fixup! Image blur cutoff

--- a/frontend/src/Movie/MovieImage.css
+++ b/frontend/src/Movie/MovieImage.css
@@ -1,3 +1,7 @@
 .blur {
   filter: blur(13px);
 }
+
+.container {
+  overflow: hidden;
+}
